fixed scrollbar for messages page in large veiw

--- a/stylesheets/messages.scss
+++ b/stylesheets/messages.scss
@@ -18,6 +18,10 @@ html {
   font-family: $font;
   scroll-behavior: smooth;
 
+  @media (min-width: 1024px) {
+    overflow-y: hidden;
+  }
+
   ::-webkit-scrollbar {
     width: 1rem;
   }
@@ -33,6 +37,13 @@ html {
 
     &:hover {
       background: $my-orange;
+    }
+  }
+
+  .scroll {
+    @media (min-width: 1024px) {
+      height: 83vh;
+      overflow-y: auto;
     }
   }
 
@@ -74,6 +85,9 @@ html {
     // * {
     //   border: 2px dotted rgb(0, 0, 0);
     // }
+    .orange-hover:hover {
+      color: $my-orange;
+    }
 
     header {
       background-color: white;
@@ -82,16 +96,18 @@ html {
       grid-area: head;
 
       nav {
-        display: grid;
-        grid-template-columns: 1fr 2fr;
+        @media (min-width: 1024px) {
+          display: grid;
+          grid-template-columns: 1fr 2fr;
 
-        .chatnav {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          padding: 0 8%;
-          font-weight: bold;
-          font-size: 1.2em;
+          .chatnav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 8%;
+            font-weight: bold;
+            font-size: 1.2em;
+          }
         }
 
         .messagenav {
@@ -107,6 +123,10 @@ html {
             font-size: 0.6em;
             text-align: center;
             margin-top: -20px;
+
+            &:hover {
+              color: $my-orange;
+            }
           }
 
           @media (min-width: 1024px) {
